fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html {
 }
 @media screen and (max-width:400px) {
   html{
-    overflow: hidden;
+    overflow-x: hidden;
   }  
     
 }
